--- a/LAB04 - Homogeneous Coordinates/lab4_2.html
+++ b/LAB04 - Homogeneous Coordinates/lab4_2.html
@@ -56,7 +56,7 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
-<script type="text/javascript" src="lab4_2.html"></script>
+<script type="text/javascript" src="lab4_2.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="512"" height="512">
