--- a/LAB04 - Homogeneous Coordinates/lab4_6.html
+++ b/LAB04 - Homogeneous Coordinates/lab4_6.html
@@ -56,7 +56,7 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
-<script type="text/javascript" src="lab4_3.js"></script>
+<script type="text/javascript" src="lab4_6.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="512"" height="512">
@@ -64,7 +64,7 @@ Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
 <br/>
-
+<button id="RandomRot">Mudar Rotação</button>
 
 </body>
 </html>
