--- a/LAB04 - Homogeneous Coordinates/lab4_7.html
+++ b/LAB04 - Homogeneous Coordinates/lab4_7.html
@@ -8,6 +8,8 @@ attribute  vec4 vColor;
 varying vec4 fColor;
 
 uniform vec3 theta;
+uniform vec3 scale;
+uniform vec3 transform;
 
 void main()
 {
@@ -33,9 +35,18 @@ void main()
 		    -s.z,  c.z, 0.0, 0.0,
 		    0.0,  0.0, 1.0, 0.0,
 		    0.0,  0.0, 0.0, 1.0 );
-
+    
+    mat4 sc = mat4(scale.x, 0.0, 0.0, 0.0,
+            0.0, scale.y, 0.0, 0.0,
+            0.0, 0.0, scale.y, 0.0,
+            0.0, 0.0, 0.0, 1.0);
+    
+    mat4 t = mat4( 1.0, 0.0, 0.0, 0.0,
+            0.0, 1.0, 0.0, 0.0,
+            0.0, 0.0, 1.0, 0.0,
+            transform.x, transform.y, transform.z, 1.0);
     fColor = vColor;
-    gl_Position = rz * ry * rx * vPosition;
+    gl_Position = t * rz * ry * rx * sc * vPosition;
     gl_Position.z = -gl_Position.z;
 }
 </script>
@@ -56,7 +67,7 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
-<script type="text/javascript" src="lab4_3.js"></script>
+<script type="text/javascript" src="lab4_7.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="512"" height="512">
@@ -64,7 +75,9 @@ Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
 <br/>
-
+<button id="RandomRot">Mudar Rotação</button>
+<button id="ScaleUp">Dobrar Tamanho</button>
+<button id="ScaleDown">Dividir Tamanho</button>
 
 </body>
 </html>
